# r3d-legacy

./: CMakeLists.txt  README.md  TODO
examples/: CMakeLists.txt  bloom.c  custom_target.c  fog.c  layers_light.c  layers_scene.c  logo.c  particles.c  pbr.c  points.c  resize_expand.c  resize_keep.c  robot.c  shadow_map.c  skybox.c  sprite.c  toon.c
examples/assets/: bat.glb
include/: r3d.h
include/detail/: ShaderCodes.hpp
samples/: CMakeLists.txt  ShaderCodes.cpp.in
scripts/: shader_minifier.py
shaders/: CMakeLists.txt  blur.fs  brdf.vs  material.fs  material.vs  postfx.fs  shader_code.cpp.in  skybox.vs
shaders/cubemap/: irradianceConvolution.fs
shaders/debug/: debugDepth.vs  debugDepthTexture2D.fs
shaders/depth/: depth.vs  depthCube.vs
shaders/glsl330/: brdf.fs  material.vs  postfx.fs  skybox.fs
shaders/glsl330/cubemap/: cubemap.vs  cubemapFromEquirectangular.fs  prefilter.fs
shaders/glsl330/debug/: debugDepthCubemap.fs
shaders/glsl330/depth/: depth.fs  depthCube.fs
src/: CMakeLists.txt  core.cpp  model.cpp  renderer.hpp  skybox.cpp  transform.c
src/core/: CMakeLists.txt  debug.cpp  environment.cpp  lighting.cpp  lighting.hpp  material.cpp  renderer.cpp  renderer.hpp
src/detail/: BatchMap.hpp  BloomRenderer.hpp  Cube.hpp  GL.hpp  Light.hpp  Math.h  Math.hpp  Model.hpp  Quad.hpp  RandomGenerator.hpp  RenderTarget.hpp  Renderer.hpp  ShaderCode.hpp  ShaderMaterial.hpp  Skybox.hpp  batch_map.hpp  bloom_renderer.hpp  drawable_cube.hpp  drawable_quad.hpp  frustum.hpp  gl.hpp  id_manager.hpp  math.h  render_target.hpp  shader_material.hpp
src/detail/GL/: GLCube.hpp  GLFramebuffer.hpp  GLQuad.hpp  GLRenderbuffer.hpp  GLShader.hpp  GLTexture.hpp
src/detail/gl_helper/: gl_framebuffer.hpp  gl_renderbuffer.hpp  gl_shader.hpp  gl_texture.hpp
src/detail/helper/GL/: GLFramebuffer.hpp  GLQuad.hpp  GLRenderbuffer.hpp  GLShader.hpp  GLTexture.hpp
src/detail/helper/RL/: RLCamera3D.hpp  RLShader.hpp  RLTexture.hpp
src/detail/utils/: Build.hpp
src/objects/: CMakeLists.txt  interpolation_curve.c  model.cpp  model.hpp  particle_system_cpu.c  particle_system_cpu.cpp  particle_system_cpu.hpp  skybox.cpp  skybox.hpp  sprite.c  transform.c
