function(add_r3d_example example_name source_file)
    add_executable(${example_name} ${source_file})
    target_compile_definitions(${example_name} PRIVATE R3D_ASSETS_PATH="${R3D_ROOT_PATH}/examples/assets/")
    target_link_libraries(${example_name} PRIVATE r3d)
    message(STATUS "Example '${example_name}' created with source file '${source_file}'")
endfunction()

add_r3d_example(r3d_points ${R3D_ROOT_PATH}/examples/points.c)
add_r3d_example(r3d_skybox ${R3D_ROOT_PATH}/examples/skybox.c)
add_r3d_example(r3d_bloom ${R3D_ROOT_PATH}/examples/bloom.c)
add_r3d_example(r3d_toon ${R3D_ROOT_PATH}/examples/toon.c)
add_r3d_example(r3d_pbr ${R3D_ROOT_PATH}/examples/pbr.c)
add_r3d_example(r3d_fog ${R3D_ROOT_PATH}/examples/fog.c)
add_r3d_example(r3d_resize_expand ${R3D_ROOT_PATH}/examples/resize_expand.c)
add_r3d_example(r3d_resize_keep ${R3D_ROOT_PATH}/examples/resize_keep.c)
add_r3d_example(r3d_custom_target ${R3D_ROOT_PATH}/examples/custom_target.c)
add_r3d_example(r3d_shadow_map ${R3D_ROOT_PATH}/examples/shadow_map.c)
add_r3d_example(r3d_robot ${R3D_ROOT_PATH}/examples/robot.c)
add_r3d_example(r3d_particles ${R3D_ROOT_PATH}/examples/particles.c)
add_r3d_example(r3d_sprite ${R3D_ROOT_PATH}/examples/sprite.c)
add_r3d_example(r3d_logo ${R3D_ROOT_PATH}/examples/logo.c)
